# feaston

./: .gitignore  .prettierignore  Cargo.nix  Cargo.toml  README.md  deny.toml  feaston-api.nix  feaston-static.nix  feaston.nix  flake.nix  index.html  justfile  mprocs.yaml  rust-toolchain.toml  tailwind.config.js  zellij_layout.kdl
.github/workflows/: build.yml  check.yml  rust.yml
assets/: main.css
assets/i18n/: de.json
migrations/: 1_event.sql  2_contribution.sql  2_event.sql  2_food_category.sql  3_contribution.sql  3_food_category.sql  4_contribution.sql
modules/feaston/: default.nix
modules/home-manager/: feaston.nix
nginx/: nginx.conf
src/: config.rs  error.rs  main.rs
src/controllers/: add_event.rs  edit_event.rs  get_event.rs  mod.rs
src/http/: contributions.rs  error.rs  events.rs  mod.rs  types.rs
src/models/: contribution.rs  event.rs  mod.rs
styles/: tailwind.css
templates/: base.html  contact.html  contribution.html  event.html  privacy.html
templates/components/: button.html  input.html
templates/contribution/: edit.html  list.html
templates/event/: contribution.html  created.html  event.html
templates/event/form/: new.html
www/: index.html
