[package]
name = "ibring"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
  "Nils Harbke <nils.harbke@proton.me>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.4", features = ["tower-log"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "uuid", "time", "postgres" ] }

# HTML templating
askama = { version = "0.12.1" }

# Pass command line parameters
clap = { version = "4.4.18", features = ["derive", "env"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"

# Axum builds on the types in Tower
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace", "fs"] }

uuid = { version = "1.0", features = ["serde", "v4"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0.79"
dotenv = "0.15.0"
env_logger = "0.11.0"
itertools = "0.12.0"
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.56"
rayon = "1.8.1"
time = { version = "0.3.31", features = ["serde-well-known", "macros", "parsing", "formatting"] }
axum-htmx = "0.5.0"
icu = "1.4.0"
# bevy_ui = "0.12.1"

[dev-dependencies]
# Enable file system watchers
listenfd = "1.0.1"
tower-livereload = "0.9.1"

[profile.dev.package.askama_derive]
opt-level = 3
