[package]
name = "feaston"
version = "1.0.0"
edition = "2021"
publish = false
authors = ["Nils Harbke <nils.harbke@proton.me>"]

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.4", features = ["tower-log"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "uuid", "time", "sqlite", "macros" ] }
futures = "0.3"

clap = { version = "4.4.18", features = ["derive", "env"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"

# Axum builds on the types in Tower
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace", "fs"] }

uuid = { version = "1.0", features = ["serde", "v4"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0.79"
dotenv = "0.15.0"
env_logger = "0.11.0"
log = "0.4.20"
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde-well-known", "macros", "parsing", "formatting"] }

[dev-dependencies]
listenfd = "1.0.1"

