[package]
name = "feaston"
version = "1.0.0"
edition = "2021"
publish = false
license = "MIT"
authors = ["Nils Harbke <nils.harbke@proton.me>"]

[features]
serve-static = ["tower-http/fs"]

[dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "uuid", "time", "sqlite", "macros"] }
futures = "0.3"

# Parse command line arguments like --database_url or --port
clap = { version = "4.5", features = ["derive", "env"] }

# (De-)serialize structs to and from json, etc.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Axum builds on the types in Tower
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension"] }

# Generate uuid as identifier for events in database
uuid = { version = "1.8", features = ["serde", "v4"] }

# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unify error types and allow calls to .context("") 
anyhow = "1.0"

thiserror = "1.0"

# Enable logging
log = "0.4"
# Configure logging using env vars
env_logger = "0.11"

# Conversion of date and time formats between frontend (js) and database conventions
time = { version = "0.3", features = ["serde-well-known", "macros", "parsing", "formatting"] }

[dev-dependencies]
# Listen for filesystem changes and trigger rebuild
# listenfd = "1.0"
# Extract http response bodies in tests
http-body-util = "0.1"
# Mocking
# mime = "0.3"
